--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "fs-js": "^1.0.6",
     "htmx.org": "^1.9.10",
+    "pdfjs-dist": "^4.0.379",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.1"
   }
